AuthBean.Param and AuthBean.Method tests passing.